# reachy-recognizer

./: .gitattributes  .gitignore  README.md  SETUP.md  TTS_SETUP_GUIDE.md  add_face.py  behavior_module.py  behavior_speech_demo.py  camera_interface.py  demo.py  event_behavior_demo.py  event_system.py  face_database.py  face_detector.py  face_recognizer.py  greeting_coordinator.py  integrated_demo.py  main.py  pyproject.toml  recognition_pipeline.py  test-webui.py  test_logging_integration.py  test_microphone.py  test_voice.py  voice_demo.py
.github/chatmodes/: bmm-analyst.chatmode.md  bmm-architect.chatmode.md  bmm-dev.chatmode.md  bmm-game-designer.chatmode.md  bmm-game-dev.chatmode.md  bmm-pm.chatmode.md  bmm-sm.chatmode.md  bmm-ux-expert.chatmode.md
archive/: ARCHIVE_SUMMARY.md  README.md
archive/old_demos/: event_demo.py  (+1 more)
docs/: CONFIGURATION.md  GITHUB_SETUP.md  PROJECT_STRUCTURE.md  RASPBERRY_PI_SETUP.md  REORGANIZATION.md  bmm-workflow-status.md  epics.md  prd.md  voice-response-design.md
logs/: analysis_report.json
models/: README.md
scenes/: README.md  balloons.xml  halloween.xml  severance.xml  techlab.xml
src/: __init__.py
tests/: test_story_1_1_setup.py  test_story_1_2_connection.py  test_story_1_3_camera.py  test_story_1_4_integration.py  test_story_2_1_face_detection.py  test_story_2_2_face_encoding.py  test_story_2_3_face_recognition.py  test_story_2_4_recognition_pipeline.py  test_story_2_5_event_system.py  test_story_3_1_greeting_behaviors.py  test_story_3_2_tts.py  test_story_3_3_greeting_coordinator.py
tools/: analyze_logs.py
(+58 files in other folders)
