[project]
name = "reachy-mini-dev"
version = "0.1.0"
description = "Reachy Recognizer - Human-Aware AI Companion"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "librosa>=0.11.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "openai[voice-helpers]>=2.4.0",
    "pydub>=0.25.1",
    "pynput>=1.8.1",
    "pyttsx3>=2.90",
    "python-dotenv>=1.1.1",
    "reachy-mini-dances-library",
    "reachy-mini-toolbox[vision]",
    "reachy-mini[mujoco]>=1.0.0rc5",
    "rich>=14.2.0",
    "uvicorn>=0.23.0",
]

[project.optional-dependencies]
vision = [
    "face-recognition>=1.3.0",  # Requires CMake on Windows - install separately for Story 2.1
]

[tool.uv.sources]
reachy-mini-dances-library = { git = "https://github.com/pollen-robotics/reachy_mini_dances_library" }
reachy-mini-toolbox = { git = "https://github.com/pollen-robotics/reachy_mini_toolbox" }
